[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/border.svg" type="Texture" id=1]
[ext_resource path="res://assets/button.svg" type="Texture" id=2]
[ext_resource path="res://assets/Numbers/logo2.png" type="Texture" id=3]
[ext_resource path="res://scenes/WFpanel.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/PlayerControls.gd" type="Script" id=5]
[ext_resource path="res://assets/border_reverse.svg" type="Texture" id=6]
[ext_resource path="res://assets/default_theme.tres" type="Theme" id=7]

[node name="PlayerControls" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
mouse_default_cursor_shape = 16
theme = ExtResource( 7 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Panel" type="Panel" parent="."]
light_mask = 2
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="border" type="TextureRect" parent="."]
self_modulate = Color( 0.823529, 0.686275, 0.168627, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -12.0
margin_right = 19.0
margin_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="border"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 23.0
margin_top = -52.0
margin_right = 52.0
margin_bottom = -23.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 3 )
expand = true
stretch_mode = 1

[node name="GeneralInfo" parent="." instance=ExtResource( 4 )]
modulate = Color( 0.823529, 0.686275, 0.168627, 1 )
anchor_left = 0.76735
anchor_top = 0.0387328
anchor_right = 0.991362
anchor_bottom = 0.18066
grow_horizontal = 0
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="GeneralInfo"]
margin_right = 306.0
margin_bottom = 109.0
grow_horizontal = 0
custom_constants/margin_right = 10
custom_constants/margin_top = 19
custom_constants/margin_left = 26
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GeneralInfo/MarginContainer"]
margin_left = 26.0
margin_top = 19.0
margin_right = 296.0
margin_bottom = 99.0

[node name="Name" type="Label" parent="GeneralInfo/MarginContainer/VBoxContainer"]
margin_right = 270.0
margin_bottom = 34.0
grow_horizontal = 0
rect_min_size = Vector2( 270, 0 )
text = "Test Name"
autowrap = true

[node name="HSeparator" type="HSeparator" parent="GeneralInfo/MarginContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 270.0
margin_bottom = 42.0

[node name="PlayerNum" type="Label" parent="GeneralInfo/MarginContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 270.0
margin_bottom = 80.0
grow_horizontal = 0
text = "Player 1"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats" parent="." instance=ExtResource( 4 )]
modulate = Color( 0.823529, 0.686275, 0.168627, 1 )
anchor_left = 0.781606
anchor_top = 0.185314
anchor_right = 0.990976
anchor_bottom = 0.566824
margin_bottom = 3.05176e-05
grow_horizontal = 0
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="Stats"]
margin_right = 285.0
margin_bottom = 292.0
grow_horizontal = 0
grow_vertical = 2
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Stats/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 275.0
margin_bottom = 282.0
grow_horizontal = 0

[node name="CommandBlock" type="Control" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.2227
margin_top = -760.77
margin_right = 790.223
margin_bottom = -665.771
grow_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Roll" type="Button" parent="CommandBlock"]
light_mask = 0
anchor_left = 0.00641025
anchor_top = 0.0842114
anchor_right = 0.220513
anchor_bottom = 0.757903
rect_min_size = Vector2( 64, 64 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Command"
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": true
}

[node name="backing" type="TextureRect" parent="CommandBlock/Roll"]
modulate = Color( 0.823529, 0.686275, 0.168627, 1 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 1

[node name="Commands" type="PanelContainer" parent="CommandBlock"]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = 550.888
margin_right = 23.0
margin_bottom = 623.888
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="CommandBlock/Commands"]
margin_left = 6.0
margin_top = 10.0
margin_right = 17.0
margin_bottom = 63.0

[node name="HBoxContainer" type="HBoxContainer" parent="CommandBlock/Commands"]
margin_left = 6.0
margin_top = 10.0
margin_right = 17.0
margin_bottom = 63.0
custom_constants/separation = 15

[node name="PlayerControlsEndTurn" type="Button" parent="."]
anchor_left = 0.87007
anchor_top = 0.902144
anchor_right = 0.985737
anchor_bottom = 0.977665
grow_horizontal = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Done"
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": true
}

[node name="TextureRect" type="TextureRect" parent="PlayerControlsEndTurn"]
modulate = Color( 0.823529, 0.686275, 0.168627, 1 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 685.255, 388.877 )
scale = Vector2( 1.24733, 0.999996 )
texture = ExtResource( 6 )
mode = 3
range_item_cull_mask = 2
__meta__ = {
"_edit_lock_": true
}
[connection signal="pressed" from="CommandBlock/Roll" to="." method="_on_Roll_pressed"]
[connection signal="pressed" from="PlayerControlsEndTurn" to="." method="_on_PlayerControlsEndTurn_pressed"]
